@@ -26,6 +26,8 @@
 #include "showimagewidget.h"
 #include "navigator.h"
 #include "information.h"
+#include "daemondbus.h"
+#include "sidebar.h"
 
 #include "global/variable.h"
 #include "controller/interaction.h"
@@ -49,8 +51,10 @@ private:
     OpenImage *openImage = nullptr;//打开图片
     ShowImageWidget *showImageWidget = nullptr;//展示图片
     Information *information = nullptr;//信息窗口
-    QGSettings *m_pGsettingThemeData = nullptr;
-    QGSettings *m_pGsettingControlTrans = nullptr;
+
+    QGSettings *m_pGsettingThemeData = nullptr;//主题
+    QGSettings *m_pGsettingControlTrans = nullptr;//控制面板透明度
+
     QSize widgetSize;
     QSize widgetPosition;
     QPoint p;
@@ -59,13 +63,18 @@ private:
     QTimer *timer_infor;
     QTimer *timer_navi;
 //    QTimer *timer_leave;
+
+    // 用户手册功能
+    DaemonDbus *mDaemonIpcDbus;
+
     void _delayHide();//顶栏工具栏的延时隐藏
     void _delayHide_infor();//顶栏工具栏的延时隐藏
     void _delayHide_navi();//导航栏在鼠标离开界面时隐藏
 //    void _delayHide_leave();//顶栏和底栏在鼠标离开界面时隐藏
 
-    bool inforState = true;
+    bool inforState = true;//信息栏状态
     bool openClose;
+    bool hoverState = true;//判断隐藏中断
 
     void _setstyle();//设置QSS
     void _initconnect();//初始化连接
@@ -93,6 +102,8 @@ private:
     void resizeEvent(QResizeEvent *event);
     void leaveEvent(QEvent *event);
     void paintEvent(QPaintEvent *event);
+    // 键盘响应事件
+    void keyPressEvent(QKeyEvent *event);
 
 protected:
     virtual void dragEnterEvent(QDragEnterEvent *event);
