@@ -1,3 +1,13 @@
+kylin-photo-viewer (1.0.0-2) v101; urgency=medium
+  
+  * 解决BUG#44681 中文环境下麒麟看图页面文字显示为英文
+  * 解决BUG#44688 在应用主页首次添加图片后标题栏被图片遮挡
+  * 解决BUG#44713 添加gif或apng格式图片，打开详情页面，若显示标题栏，详情页面会发生抖动，且标题栏遮挡了部分详情页面的显示 
+  * 解决BUG#44758 tiff和jpeg格式图片可通过页面功能按钮添加，但无法通过拖拽添加至应用页面显示 
+  * 解决BUG#44778 工具栏和标题栏未隐藏状态下，鼠标移出窗口外再移回窗口悬浮于工具栏或标题栏上时，工具栏和标题栏仍按鼠标移出窗口时的时间2s后自动隐藏
+
+ -- liuyuhui <liuyuhui@kylinos.cn>  Thu,25  Mar 2021 09:46:00 +0800
+
 kylin-photo-viewer (1.0.0-1) v101; urgency=medium
   
   * 首次上传
